# compositeILM

compositeILM/: BBVI.cpp  CMakeLists.txt  Clustering.cpp  Clustering.h  HamiltonianMC.cpp  HamiltonianMC.h  ILM.cpp  ILM.h  Inference.cpp  Inference.h  Inference_composite.cpp  Inference_composite.h  Inference_homogenous_population.ipynb  MCMC.cpp  MCMC.h  MCMC_composite.cpp  MCMC_composite.h  generate_individuals.cpp  generate_individuals.h  main.cpp  plot.ipynb  plot_composite.ipynb  posterior_predictive_checks.cpp  posterior_predictive_checks.h  posterior_predictive_checks_composite.cpp  posterior_predictive_checks_composite.h  posterior_predictive_checks_inftime.csv  records.csv  samples.csv  samples_HMC.csv  samples_a0.csv  samples_composite.csv  samples_composite_K.csv  samples_composite_bc.csv  samples_composite_bc_tilde_woeps.csv  samples_composite_bc_tilde_woeps_infcentroids.csv  samples_composite_bc_tilde_woeps_infcentroids_delta.csv  samples_composite_bc_tilde_woeps_infcentroids_inflated.csv  samples_composite_tv.csv  samples_logtransform.csv  (+2 more)
compositeILM/.ipynb_checkpoints/: ILM-checkpoint.cpp  Inference_composite-checkpoint.cpp  Inference_composite-checkpoint.h  MCMC-checkpoint.h  generate_individuals-checkpoint.cpp  generate_individuals-checkpoint.h  plot-checkpoint.ipynb  posterior_predictive_checks-checkpoint.cpp  posterior_predictive_checks-checkpoint.csv  posterior_predictive_checks_inftime-checkpoint.csv  posterior_predictive_checks_inftime_infcentroids-checkpoint.csv  records-checkpoint.csv  samples-checkpoint.csv  samples_a0-checkpoint.csv  samples_composite-checkpoint.csv  samples_composite_K-checkpoint.csv  samples_composite_bc_tilde-checkpoint.csv  samples_composite_bc_tilde_woeps-checkpoint.csv  samples_composite_bc_tilde_woeps_infcentroids-checkpoint.csv  samples_composite_tv-checkpoint.csv  samples_logtransform-checkpoint.csv
